# colorlight

./: .gitignore  .gitmodules  ARCH.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build.sh  clear_panel.py  colorlight.bit  colorlight.py  docker_build.sh  gen_test_image.py  hub75.py  network_setup.sh  notes.org  setup.sh  smoleth.py  test_10x10.py  test_box.py  test_original_format.py  test_panel.py  test_red.py
backup_128x64/: phy_io.v  (+1 more)
sw_rust/barsign_disp/: Cargo.toml  build.rs  regions.ld
sw_rust/barsign_disp/src/: bitmap_udp.rs  ethernet.rs  flash_id.rs  hal.rs  http.rs  hub75.rs  img.rs  layout.rs  lib.rs  main.rs  menu.rs  panic.rs  patterns.rs  pearson_hash.rs  tftp_config.rs
sw_rust/litex-pac/: Cargo.toml  colorlight.svd  device.x
sw_rust/litex-pac/src/: ethphy.rs  hub75.rs  identifier_mem.rs  spiflash_mmap.rs  timer0.rs
sw_rust/litex-pac/src/ctrl/: bus_errors.rs
sw_rust/litex-pac/src/ethmac/: rx_datapath_crc_errors.rs  sram_reader_ev_status.rs  sram_reader_length.rs  sram_reader_slot.rs  sram_writer_ev_pending.rs  sram_writer_ev_status.rs  sram_writer_slot.rs
sw_rust/litex-pac/src/ethmem/: rx_buffer_1.rs  tx_buffer_1.rs
sw_rust/litex-pac/src/ethphy/: mdio_w.rs
sw_rust/litex-pac/src/hub75/: fb_base.rs  panel0_0.rs  panel0_1.rs  panel1_0.rs  panel1_1.rs  panel1_2.rs  panel1_3.rs  panel2_0.rs  panel2_1.rs  panel2_2.rs  panel3_0.rs  panel3_1.rs  panel3_3.rs  panel4_0.rs  panel4_1.rs  panel5_0.rs  panel5_1.rs  panel5_2.rs  panel5_3.rs  panel6_0.rs  panel7_0.rs  panel7_1.rs  panel7_2.rs
sw_rust/litex-pac/src/hub75_palette/: hub75_palette.rs
(+163 files in other folders)
