[package]
name = "litex-pac"
version = "0.0.1"
description = "svd2rust generated pac"
license = "ISC"
authors = ["Piotr Esden-Tempski <piotr@esden.net> & David Sawatzke <d-git@sawatzke.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
riscv = "0.12.0"
vcell = "0.1.3"
riscv-rt = { optional = true, version = "0.13.0" }

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.33.0"

[dependencies.critical-section]
optional = true
version = "1.0.0"
